<resources>

    <string name="Quiz_Unit">Quiz units</string>
    <string name="Math_Button">Maths</string>
    <string name="English_Button">English</string>
    <string name="Geography_Button">Geography</string>

    <string name="choose_your_quest">Choose your Quest!</string>

    <string name="maths_text">Maths</string>
    <string name="english_text">English</string>
    <string name="geography_text">Geography</string>


    <string name="math_level">0%</string>
    <string name="english_level">0%</string>
    <string name="geography_level">0%</string>


    <string name="quiz_unit_title">Quiz units</string>
    <string name="T1_Topic">T1.Topic</string>
    <string name="T1_Topic_title_1">Subtopic</string>
    <string name="T1_Topic_description">Description of the subtopic</string>
    <string name="T1_Topic_solve_button">Solve!</string>
    <string name="T1_Topic_practise_button">Practice!</string>


    <string name="T2_Topic">T2.Topic</string>
    <string name="T2_Topic_title_1">Subtopic</string>
    <string name="T2_Topic_description">Description of the subtopic</string>
    <string name="T2_Topic_solve_button">Solve!</string>
    <string name="T2_Topic_practise_button">Practice!</string>
    

    <string name="t1_solve_option">1</string>
    <string name="t2_solve_option">2</string>


    <string name="app_name">LearnQuest</string>
    <string name="login_title">LearnQuest</string>
    <string name="login_title2">Have fun learning!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_go">LET\'S GO!</string>
    <string name="login_noAccount">I don\'t have an account</string>
    <string name="quest_icon_description">Icono de una quest</string>
    <string name="snowy_mountains_description">Imagen background del login</string>
    <string name="shiny_star_description">Background imagen del login</string>
    <string name="photo_description">profile photo</string>
    <string name="go_quest_button">Go quest!</string>
    <string name="go_quest_image_description">go quest image</string>
    <string name="achievements_button">Achievements</string>
    <string name="level_display">Level 0</string>
    <string name="exp_to_display">25 / 100</string>
    <string name="new_quest_button">Create a new quest</string>
    <string name="new_quest_icon_description">create a new quest icon</string>
    <string name="log_out_button">Log out</string>
    <string name="log_out_icon_description">log out icon</string>

    <string name="hint_activity_title">Hint</string>
    <string name="yes_cheat_button_text">Yes</string>
    <string name="no_cheat_button_text">No</string>
    <string name="confirmation_cheat">Are your sure?</string>ç
    <string name="confirmation_info_cheat">The hint could be true or false. Either way you will lose some XP</string>
    <string name="return_to_question_button_text">Return to question!</string>
    <string name="empty_string">"????"</string>

    <string name="final_quiz_activity_title">Quiz End</string>
    <string name="gold_medal_description">Medalla de final de quiz (posibilidad de que sea sliver o bronce)</string>
    <string name="earned_display">You earned 40 xp!</string>
    <string name="xp_left_to_next_level">You need 1300xp to reach level 3!</string>
    <string name="return_home_button">Return to home</string>
    <string name="level_display_final_quiz">Level 0</string>

    <string name="quiz_screen_title">Example Quiz</string>
    <string name="question_number_text">Question 1</string>
    <string name="question_text">Question text</string>
    <string name="option1_text">Option 1</string>
    <string name="option2_text">Option 2</string>
    <string name="option3_text">Option 3</string>
    <string name="correct_text">Correct</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="hint_button_text">Hint</string>
    <string name="next_button_text">Next</string>
    <string name="quests_unit_title">Quests</string>

    <string name="registro_screen_title">Sign up</string>
    <string name="registro_username_text">Username</string>
    <string name="registro_password_text">Password</string>
    <string name="registro_correo_text">Email</string>
    <string name="signup_button_text">Sign Up!</string>
    <string name="registro_warning_text">There is an empty field. Please check everything is filled correctly</string>
    <string name="subject">Subject</string>

    <string name="message_returnQuizAlert">Leaving the Quiz</string>
    <string name="details_returnQuizAlert">You will lose all progress</string>
    <string name="details_eliminateUserAlert">Are you sure you want to remove this User from the database forever?</string>
    <string name="details_returnLoginAlert">¿Are you sure you want to logout?</string>
    <string name="message_returnLoginAlert">Logout</string>
    <string name="message_eminateUserAlert">Remove User</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_eliminateUserAlert">Eliminate it!</string>
    <string name="registro_warning_textTooLong">Invalid username, it is too long</string>

    <string name="remove_user">Remove user</string>
    <string name="remove_user_icon_description">Imagen de borrado de usuario</string>
    <string name="question_timer_finished_text">Timeout!</string>
    <string-array name="imagenes_nombres">
        <item>Predeterminada</item>
        <item>Patata</item>
        <item>Rabano</item>
        <item>Lechuga</item>
    </string-array>
    <string name="share_score_text">Share score</string>
    <string name="email_shareScoreMessage">Learn Quest App! Test your skills</string>
    <string name="subject_maths">Maths</string>
    <string name="subject_english">English</string>
    <string name="subject_geography">Geography</string>
    <string name="subject_unregistered">Unregistered Subject</string>
    <string name="email_errorToast">There is no email client installed.</string>

    ///////////////////////--MATH QUIZ--////////////////////////
    <string name="maths_toolbar">Maths Quiz</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>

    <string name="button_enter_mathQuiz">Enter</string>
    <string name="button_next_mathQuiz">Next</string>
    <string name="button_clean_mathQuiz">Clean</string>
    <string name="button_hint_mathQuiz">Hint</string>
    <string name="profile_photo_title">Profile Image Preview</string>
    <string name="registro_warning_text_same_user">Username already exists</string>
    <string name="statistics_button">Statistics</string>
    <string name="achievements">Achievements</string>
    <string name="statistics_text">User board</string>
    <string name="statistics_username">Username</string>
    <string name="statistics_userlevel">Level 0</string>
    <string name="statistics_math">Maths</string>
    <string name="statistics_english">English</string>
    <string name="statistics_geography">Geography</string>



    ////////////////////////////--GEOGRAPHY QUIZ--/////////////////////

    <string name="button_enter_geoQuiz">Enter</string>
    <string name="button_next_geoQuiz">Next</string>
    <string name="button_hint_geoQuiz">Hint</string>
    <string name="button_hide_geoQuiz">Hide</string>
    <string name="geography_toolbar">Geography Quiz</string>
    <string name="galicia_button">Galicia</string>
    <string name="asturias_button">Asturias</string>
    <string name="castillaYleon_button">Castilla y Leon</string>
    <string name="cantabria_button">Cantabria</string>
    <string name="paisVasco_button">Pais Vasco</string>
    <string name="laRioja_button">La Rioja</string>
    <string name="aragon_button">Aragon</string>
    <string name="cataluna_button">Cataluna</string>
    <string name="valencia_button">Valencia</string>
    <string name="murcia_button">Murcia</string>
    <string name="castillaLaMancha_button">Castilla-La Mancha</string>
    <string name="madrid_button">Madrid</string>
    <string name="navarra_button">Navarra</string>
    <string name="extremadura_button">Extremadura</string>
    <string name="andalucia_button">Andalucia</string>
    <string name="islasCanarias_button">Islas Canarias</string>
    <string name="islasBaleares_button">Islas Baleares</string>
    <string name="ceuta_button">Ceuta</string>
    <string name="melilla_button">Melilla</string>
    <string name="english_quiz_title">English Quiz</string>
    <string name="maths_quiz_title">Maths quiz</string>


</resources>
