...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title2"
        app:layout_constraintVertical_bias="0.323">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:ems="3"
            android:gravity="start"
            android:hint="@string/login_username"
...
